# xyz

./: .clang-format  .gitignore  Justfile  README.md  devenv.nix  meson.build
.github/workflows/: tests.yml
src/: array.hpp  bitfield.hpp  grid.hpp  math.hpp  option.hpp  pool.hpp  print.hpp  result.hpp  vector2.hpp  vector2_iostream.hpp
tests/: base.hpp  buster.hpp  test_array.cpp  test_bitfield.cpp  test_grid.cpp  test_math.cpp  test_option.cpp  test_pool.cpp  test_print.cpp  test_result.cpp  test_vector2.cpp
